@@ -15,17 +15,13 @@ DIST brltty-4.5.tar.gz 3260872 SHA256 87af9ecff2ff563f4dc62e0ca4e8d8217ee7ee57e8
 DIST brltty-5.0.tar.xz 2213768 SHA256 e3613fa2e8c3450d7e7bee7107235344c474dc310af5adcc19761f361e8c8b92 SHA512 2a66f2fcf0ada9a499450e14c11efe2cffd1e9b465755aab60093f383c596d4f4f3be0651e6559df143fc1547a5d5be24caf485596cb8ad691b029de110f8dcc WHIRLPOOL 3f36f036f5eb6479e9c42cc79eead215d7133cfb6d2c4de3e4eaa6f776299d021c7830e32c914b7cb7686bd4d31902c0762d309702ef686ab7b37aff6ee4161a
 EBUILD brltty-4.5-r3.ebuild 4414 SHA256 ca6a86a5ba9689093cb0fae2cdf6c080bc942e75ff2a3a469237e174680a5d83 SHA512 2d3a17f27e33c40ce8ba4ce74795ca82ed71d4229dd40b0efa564a89831a3e5e8da6bfb2343bac97123f6339d747d65a188eadf4dc2b34ec7f6a9f275780fb7f WHIRLPOOL a4bb274038287100f4bfe22c43de7885d6661ab1ba58727f11a66030021d686998dba8ec56a09de2d890a8f2585286a3210de2c5f91922f7a936c0bee21ece7d
 EBUILD brltty-5.0-r2.ebuild 4457 SHA256 5762e928bb2d1bc57b3cb2beeaa0d499a24d2414b6cb2aa4228188928a7f17c3 SHA512 44d3fd3c169104f7f8a0a3bde011ec9592c86f30ff784d9aae3f084070fe39b0403ac532dae623e997ac5d7fb2f9ba02ffdd8c208b05948b4342f8c305699cfc WHIRLPOOL 07fe45b13c9d132ccbd3dae12e6237cc1d709d4ec52fee8f4261403f1ac45c8b8dbb5d92b7fc16c7a0ac3ba1b0010ce814240dfa49539793b2d9c781ae3ded5f
-EBUILD brltty-5.0-r3.ebuild 4979 SHA256 accda0dff70c9520c3de3ea36d9765b087aff5242e00e574bedf084d6c916129 SHA512 75e9a6912d865536ead2be99101a48038e37b97caf07ce58a812e5ece862535b3fa630c51369ac57533e8ba39c24f4bda27d4f27aff39d3aef6528fd39319113 WHIRLPOOL 84adc77ea34dfa8e65aa0bcc1eac67948ba4895bc69d126d0f44c8cf1283de0ee8f610a9e64ce74f0bfc5eb47ca283877319b148e3c967eef5935bb5b483aece
-MISC ChangeLog 20008 SHA256 7eb19c8ff8abc067fc68ba261594992d914bfc5fd49ac4b836f4d9419b2772f4 SHA512 fe7067c1a28a9cb28bb351a587451e652f10f8e17cd29c713ae7d3009e47b5bfd21ec30fcccccca0ade2c88b4b1aabf283bf132013652e90fbc03aae50faa05b WHIRLPOOL e6ca53c53761a6b0ed474f711405748d56c90c2e679fdcce1c5c73ece7c3906603ffc85f766ec5dcd10771a8073f33da4421a676e38dc36bf873c36b071bcdf8
+EBUILD brltty-5.0-r3.ebuild 4972 SHA256 163597d122e217579b6dc14d4965c6f893a4564d942ee34423ff1888d70109ac SHA512 90d35e6a850b4b2be854d99f399c3b517ba683d4eca4ec92ba9ca074a677508e51fbbda352d4f75a67d0c27e673bd8c4b80e638b8a6744cf042757a340d7c05f WHIRLPOOL e04ac0dab3d795da4b19ceac4a6d9c5b1b5542414a48740759bad1fc64162e2b14fed91956f0d6a79d49fa75634772076fe58aaf1a41ab4ff042b78ca7900930
+MISC ChangeLog 20105 SHA256 87ceb009e3efa2c902e9289968e0854a210acd9e6994aa608acad67cdf9c4582 SHA512 145a9267eabe99005c92a035f6a125acdfb222954d005b3f9c7811efe7275024bc2efcf82d774488149cff9e3eef51dedfd077c9f604d4676955b6de13f1b6ae WHIRLPOOL 1c18527551031e3b9eee444b8b4e3516ea63399fc6a25632c602cd3fdb91a9aa7b71442d7232a58f950a26c4b15b146a0f9b3aa4ff0c3cffb4aa995502ae8e3b
 MISC metadata.xml 1918 SHA256 5cdd92581b4e46c8dc3c468f51bf04dd5456dbddc1f4f88fef47879953f35d88 SHA512 0dd12af812f22da964152898a256c957e2074d1ae9eb2f8dd471f8f3cfb0016439271636759b622756d67f0eadfc5f062556ff5f85be4445c03dc5fe097814e4 WHIRLPOOL 1c232cc5d306a62507be40fd18552a284e87ae2a10e920d4cc3886ea59e4bc075a0ce9636eb15f6d59fb07bfc29cf5b503b87b8425a275b079d4e91ffdf2ec78
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTkZsiAAoJEH8qFnJlIeBtM44H/i+k3gCZ1hePik+OpyPIhAX4
-Xfcbtv2UPhxIBFqSw4ME3j9QpfppmTVlPmV9LKdIQnBrNgc2gYlL+mzfK+YM0cHC
-d8qijHDHRQbs89higdmhOYWOuzvkYusj6pB9Sx/4zjDlXmJan3S8QrtPYHstEK7L
-sx7pGdE6//6MuQQjetJP3MdhoM4ZbCLI7BSnwTfD2CDbtaYRI+IrDvf+d3YQncVP
-r1GyR/AzCXcgB3UpW0ga6Bywble5vHXTyHxnqeyX6ELBnKQrkoUVxB3nQ3WFkmPr
-Ue+3VgtByKgUypPAHjbuHTqSouam+5KXWICY5P6L3sohGL9gpdS1JmGowFk8RJE=
-=DN7U
+iEYEAREIAAYFAlPinmQACgkQVWmRsqeSphOxtwCeK4/4Ipy6H7taWexiWI/ay7yB
+DHwAn2oXKN9sc6xZV75lOrzeXSxvtamU
+=Xkp6
 -----END PGP SIGNATURE-----
