@@ -11,13 +11,13 @@ DIST libmodplug-0.8.8.5.tar.gz 546751 SHA256 77462d12ee99476c8645cb5511363e3906b
 EBUILD libmodplug-0.8.8.2.ebuild 1063 SHA256 50c9a57ac9f7ff9f469c45b782ec01799776497bf9a1fadba83081518432e247 SHA512 86737b06a05dd572072ee8fa20ae416b8d3ab02442f52ebd8d8a26d7a420b399343ca7016f8e9340c7c540e0c595628052fa0b27464549668e2d1179e8f1540a WHIRLPOOL d7cc51e08680e64d56eabb69d0d44bcb570ebb82773ec12d3e1f1084c50559801eede5375ea4dbc61af719aaf7b6b5476aa246161bf6715fcb22288bcc09bffd
 EBUILD libmodplug-0.8.8.4-r1.ebuild 988 SHA256 b1f4bb286716bc2732dc456e42cd9df4df822a7a50beec23987232c9dfc1a548 SHA512 ce6d9911dd6cca2f1127c521a57e1d09d34586b2771e06dcd2e55556911d01280b7d9c4e975c3a500ff39ee1e892f157d4da2342632bdd240bd6b24464bbcbce WHIRLPOOL 0e2ef4cbdda2e99f215deb6c834cedf28159d7140c88435f24c3911b3b5bfda4b18a7db94b15c02b6cd4e132fc8414756899301a77d9410b3c96579d8111ea97
 EBUILD libmodplug-0.8.8.4.ebuild 1046 SHA256 8945fb3235dd047916f36da855172868c3e7bbfb451533daafaa126015c1c6ea SHA512 5020c3fd1acdc0c5ff36f98eec34c547340971ea3cbdb0f83d69c08c928e52011a8f9771e45ba156b10dce945fcae5a723459b5dc90bc0d5a248736a1bc95fbb WHIRLPOOL bd505f6960e5ef7dc7fcedff3c489a8b7f691fea7af98229ae7cd0af2fca10acc1d0e222a77227dc6fa5f658a98e9bda32c909504e55aa40da6a6c1bb685b0dc
-EBUILD libmodplug-0.8.8.5.ebuild 1033 SHA256 da1f819107f7b4ba3701bfded8600336af2b3944b2921b8e8a7821915710ad29 SHA512 353fb5864b7f8fdb93a9494d11ce47273adee9288b8bea557a37d65cae59f3535e1ace434608b83a0c690ac82e5e21b54868ddd38e580122231ea1f7e9fe7f1f WHIRLPOOL 3203e9dc4b125ff1adfa88e1896017fdc6ee659966559fc7736fb6ee4b627b687fec6922c474c889fb8433e46bc6a1cb9637ea9f1242e6424d6162d473c1548b
-MISC ChangeLog 10788 SHA256 339ed441e05c4c0ac1b1baea5ea3f70d5df618a613dfa7e15c89eaedfefd355d SHA512 d9df5903a19cd485baecd06f3029638a41bf74a92bf01ceb506cad532ac4b42725e6d69f6f8027cad8b961ad29b39cc21da908b245666894dd6b44433e10988a WHIRLPOOL 2e3883ab9acc1c81ee09f96dd36b743b1c7967fc080dc43ceba81a7e578a7fcfadc4baaa274061a2ac2bb8dce2f10f348be30ff239a732eb0ce1831f4188ecc9
+EBUILD libmodplug-0.8.8.5.ebuild 1027 SHA256 e1a0434fd10b47b0a00b24b52bf63678a47fa8571c978ecac2e8570a5b7e8bf2 SHA512 8da04480c72eba2e2c34da1edadc18cae2009a4c31e51b71e69298a205fe09062447340ef2131fda3c4ffc976ce4a667d34dc524b1ba58d9a7eeb5440a90ff1e WHIRLPOOL bef7d4314ad7055660eb4651228259890d687516b533e2ca92db2dc7faa684f3b59e25dd5a7249e77ffdafa01a8439c41ce8f4af276c98e7afe360e58c7883ca
+MISC ChangeLog 10891 SHA256 a097d7ce67831f3dbe1d7805bc2da8c4282734adc3f3e6113414d7ae544fee9d SHA512 fa39d75344c2c7b35469fffe37ecc74b8c531ae3b030a6b37b74fd24e1c6b99600a29ec77928ead05b6c8466f94f9c2802717ee4809e5765e2934dfad208f8d0 WHIRLPOOL 9146db466b40b91cc39c396f073cbdb4bb07ed9c28ca9178023e73cb941654f52b3acb98893ca5ea2ee8f1f650919272d1e41ed07f190032f54c66fe2e164e57
 MISC metadata.xml 258 SHA256 5fa59a9b0948090cf9ac59d499e93bf0b51c3a2f11a6cca666f2d4c03eca033d SHA512 900738229ca0bb825ee4c00f5ea0839566067012ca8818673f31dbdde3d6544a7c3356c169e38968b06dae25fbb88a28cfba105a4533c6b26d0df4de0b053200 WHIRLPOOL fbe74fb92b7652da70d244ceb77c52fc99b49971971267c6a8eb34902ca684dceda27dbb36b202d7c104d2178f8ea87d67681f1bd5df31fa080ce7b9a8ab179e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPf/K4ACgkQp5vW4rUFj5qoVwCdGiAid6bsApoDM7cWNCl9to6T
-+RAAnR+E2tm3JxOITAJztN523KY32GZU
-=iKem
+iEYEAREIAAYFAlPinvIACgkQVWmRsqeSphO85ACdG9hahHHwUlO3CDF2zqQrTbXn
+6hcAni3X6sSr6BnC65TZVy/KPwp9iViX
+=3/Qq
 -----END PGP SIGNATURE-----
