@@ -4,11 +4,11 @@ DESCRIPTION=Daemon that provides access to the Linux/Unix console for a blind pe
 EAPI=5
 HOMEPAGE=http://mielke.cc/brltty/
 IUSE=+api +beeper bluetooth +contracted-braille doc +fm gpm iconv icu java +midi ncurses nls ocaml +pcm python usb +speech tcl X elibc_FreeBSD java python_targets_python2_7 python_targets_python3_2 python_targets_python3_3
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~x86
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~x86
 LICENSE=GPL-2 LGPL-2.1
 RDEPEND=java? ( >=virtual/jre-1.4 ) bluetooth? ( net-wireless/bluez ) gpm? ( >=sys-libs/gpm-1.20 ) iconv? ( virtual/libiconv ) icu? ( dev-libs/icu:= ) python? ( python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] ) ncurses? ( sys-libs/ncurses ) nls? ( virtual/libintl ) tcl? ( >=dev-lang/tcl-8.4.15 ) usb? ( virtual/libusb:0 ) X? ( x11-libs/libXaw ) java? ( >=dev-java/java-config-2.1.9-r1 )
 REQUIRED_USE=doc? ( api ) java? ( api ) ocaml? ( api ) python? ( api ) tcl? ( api )
 SLOT=0
 SRC_URI=http://mielke.cc/brltty/archive/brltty-5.0.tar.xz
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	findlib	9cf6020ee5481f39f1aa566a323f9868	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	c820706d8b22c1d0fe215a9d4a47671d	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d4c5babbe903c7b0bb55000375e70de2
+_md5_=4e7417d2a401ef3de042a231718395ea
