@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=!<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=A TCP, UDP, and SCTP network bandwidth measurement tool
+EAPI=5
+HOMEPAGE=https://github.com/esnet/iperf/
+IUSE=static-libs
+KEYWORDS=~amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~m68k-mint
+LICENSE=BSD
+SLOT=3
+SRC_URI=https://codeload.github.com/esnet/iperf/tar.gz/3.0.6 -> iperf-3.0.6.tar.gz
+_eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=a4dab14d8e22840710a7e266a2338ad0
