@@ -13,16 +13,18 @@ AUX iperf.initd 521 SHA256 929f5f87ccff042d6b14a4cf4880218fea802cd1b2f66f9bdda8d
 AUX iperf.initd-r1 543 SHA256 8fa5e8310b04d7de161013dec2f0ee7245e15fb56d23f0b2aee3779361e37bed SHA512 83c06bb8a74e4d1f6e3cd420bd3183bf7b23e1a9e9d0a9dd8e97eebf274f62d29c7553b8e56b6cd454e6990b9ad215751459a7d6bbe32e10f6f42f331163653c WHIRLPOOL b9595dde978a8a251c09de49e12e44f7a3ab33af17f8698fe77c913ce9dcaac089efcc9f7c6d92ea7ca93261f883a0ee390f5813163cfb6b7e9f78b1fd45c4d7
 DIST iperf-2.0.5.tar.gz 248583 SHA256 636b4eff0431cea80667ea85a67ce4c68698760a9837e1e9d13096d20362265b SHA512 da9a0c01dea2a9dd33aa130b11d938d5f44dd6c3ab27526b0a43df5bf2550fede04238a00b7d54037426afe90ac6d8c4f4ae6861aa170ca7835b6664c9d6537f WHIRLPOOL d66b007fad372516c7f7377872b69ea450fa9ff6d1492f2a224a73f2fb3f7616bd2d57a34a815d4d95683d81fd02d76472d4727323e920410034ba725f6476ce
 DIST iperf-3.0.5.tar.gz 397848 SHA256 bb81c724709dbb28462da14bdf9f443e8f38bfc4e3297142b2e4c35beef54f7d SHA512 26aba2f0b1b3d90b1db67277c584fd35c74868e4e0c70a530f9e2723493be9354add80015558c8eab9f26cd6083a2c0552214fa8011cb1efabd8dc104fa122fd WHIRLPOOL 503dca5d385116cccf0c0ecd2803a8936d00b76cbffafa50285784ab69c24729eef3a059339d8546e9cf585efa32bbf280445631fdd25b1bce826dbc183235bb
+DIST iperf-3.0.6.tar.gz 398565 SHA256 f9d5c9344b0386b38b66b51bcd71679a5092d529e578c60dc6ca05ee6f3d1383 SHA512 854c1e1a6e2d10b3ada3ca9ef32c6a6b8eccf83af39d55779127731a9dd019a8fe84469a18b183c44df03ad1b306214be46823643a971257c78c3f32101441fd WHIRLPOOL ac95559337139fbd6034f3f820894b51f9c3ff793bfceeb266f913243f44af2a8feb5280641c0002a45cf96dabafd53da0d2b6c78a448e09a93da1186a987609
 EBUILD iperf-2.0.5-r1.ebuild 1026 SHA256 698347aaac102c90919368d8637b4ed1da10653e7097c21d89d4a95011b855bd SHA512 2681d81f5ac3ade8e3053af8f72bf0ba97362858ae06f322115a515df6374effd34b49353984f047dce862121864ec85eb429e199149091dd752a4857979a057 WHIRLPOOL 11dfb05fb701054ba2027a6be39971b88560999dc3cb294927c6ecbbf17d3e8c80f6ddb8a6f3e8ea0265076cfab482f84c967a12b28ada7a66e8a35dc7c48ee5
 EBUILD iperf-2.0.5-r2.ebuild 1149 SHA256 5cf54afe62dfac7bdd5bd362b9656044a0bfa8b28e5861a798ed785e48c98081 SHA512 8e499b9b0652366c2041c6e0c12eadcf422fcec5a4bcb106c208133918bac68c3da4da096b08caa0a3376ca6df74dc6fb01bfa6640354bba904991004fee57c5 WHIRLPOOL e09ae52e9d0bd06b2a64ccfb7cd1b6fe71758f4b84bd2045e7dec4910b2910e0212dff2006713cdf334f85762e1fed42cb6a3e0cfe9b5af86601f08ade19ac32
 EBUILD iperf-2.0.5.ebuild 1006 SHA256 447092472a6823810972f413a4ec36a12ecf2b9d797e94034825fcbafed3df11 SHA512 d85dfe9642d52457a15b5f8653018e5188c92d8b290b7af9645fce97b609ad314f961fe572e7e91a864b4f6fb1681f02de30f7384ffcfa37f90c0cfe3879ecee WHIRLPOOL 8f0ba58ed79cc2ff27bbeae89f120bb6224f0beb31b214c9d1e27865fa0c73dd1b016fea30c6f1e813642306fbdd87af96fc709c8fa341d47777cffbfd570e25
 EBUILD iperf-3.0.5.ebuild 804 SHA256 512c26476a9b948727de601ed6fde29919405f6d1e44533d0a5565d534adca5c SHA512 89308cf272d73d6ce3907e1a7a1e4ae1f4879f8e85ba56f325e7760e3f9c59b74187d91bd3ac644552fcf294c64e96b992c79019ba21147d495bc0fb7ddf95c1 WHIRLPOOL 0dcc9cffc8f177b97471c270e9f65ab75861df69b464b86777e2c0df3b553334b35f901d2df16b7ef4aca3a0c8499b1948087759516c42e435bbc9fda184de94
-MISC ChangeLog 6606 SHA256 94c4c69aea1e78d8949a0f8ad3ec5716cd4831013ba8218a560675c8d538e21f SHA512 93b7806ddd504632fd9515a976cf27c7ceb7b5228ce4156d02acbb50ee3d4a236fa3483870c4f8a66eeddd2bfab6eb95a224e7299f74d95b0ea6277d73f1c0c8 WHIRLPOOL db40d0d178adeba430c369161f8a4513db22f967148ed4af7552104ebefd31cf2c3fc711328ca7c9a2569554be525e903e6e50a7c0d97db7e6425ee5d7850a6c
+EBUILD iperf-3.0.6.ebuild 806 SHA256 c719b24ba5eba8c29846ea2a7266edda775632ce02696cf2159f2f6cf4124e75 SHA512 6972ebf88e719a1708fdba3a0e96fff887a3c64f66074117772895282bc415b73b1c924abe5dffd8b6b17fcf569fd05eb789f28042f6b869f5315cf8516a571c WHIRLPOOL 0e620f8c14e884dbf23c24d1761b261f079af021dd834c78221a467bf782930258c240f4a264c577e5695e57858ca798611d68b9a31e37d4f3f8d8dcb17ce4d7
+MISC ChangeLog 6715 SHA256 f15f3a39b31ee7c9873266a249a6d750f8756e217b06be7240821548bbc57be9 SHA512 8f6cfae2f858b83c7adfe638a80df31d5ea0d7053616d97a7ea8f604b714b24759cb37333d582746076f2c60b73fd7e0da05f6012ce2cc6edd1c9d0330d7f6c7 WHIRLPOOL 1eb74c89e86e55d7b5ad4ba9c3ad1cbba85e1e118fc1409d54ccfd35f4f53fc51932c1fdc61b0dd97df0df6b0ddf3e5060cfc4c79fbc47d9b0feeda120b649a1
 MISC metadata.xml 159 SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 SHA512 2c104d2a804da0a38770b6f1ec26cd5b0a49e30392177d5794734a3f4129e82fd0971e5a8a1e48913bfaf1bab57e7bac1fe5ce4f5c618ce057aa5aaf9e59113b WHIRLPOOL 044dec64f8899582332d7fbd7612d2a7c5c7234c44bb9fc51a56f7d6400cd3066a154c3c49dd3f4b468f11e029aa24ff0097ab1387b9f322d57f1d9876afd601
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPbfNAACgkQuQc30/atMkAkuwCgiCyjiTh1UGOM8liakBYfLR1P
-01IAoIYAK1w6NPCUaai/XO/49uKM5ZRS
-=lyql
+iEYEAREIAAYFAlPimpUACgkQVWmRsqeSphP1VACeNVK9nTx+wfBBxLaCLBqZcr/U
+tPwAnRqK5O7Ug7jxE+CTHNRtq7yJ1owp
+=CegB
 -----END PGP SIGNATURE-----
