@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmodplug
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmodplug/ChangeLog,v 1.82 2014/08/04 21:35:28 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmodplug/ChangeLog,v 1.83 2014/08/06 21:32:32 jer Exp $
+
+  06 Aug 2014; Jeroen Roovers <jer@gentoo.org> libmodplug-0.8.8.5.ebuild:
+  Stable for HPPA (bug #480388).
 
 *libmodplug-0.8.8.5 (04 Aug 2014)
 
