@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/iperf
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/iperf/ChangeLog,v 1.52 2014/08/01 11:41:03 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/iperf/ChangeLog,v 1.53 2014/08/06 21:13:56 jer Exp $
+
+*iperf-3.0.6 (06 Aug 2014)
+
+  06 Aug 2014; Jeroen Roovers <jer@gentoo.org> +iperf-3.0.6.ebuild:
+  Version bump.
 
   01 Aug 2014; Raúl Porcel <armin76@gentoo.org> iperf-2.0.5-r2.ebuild:
   sparc/x86 stable wrt #517430
