@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/brltty
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.150 2014/06/06 10:42:40 teiresias Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.151 2014/08/06 21:30:10 jer Exp $
+
+  06 Aug 2014; Jeroen Roovers <jer@gentoo.org> brltty-5.0-r3.ebuild:
+  Stable for HPPA (bug #518990).
 
 *brltty-5.0-r3 (06 Jun 2014)
 
